Third attempt to fix dependency with patch rule

--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -13,6 +13,7 @@ PACKAGE_VERSION= 0.1-$(shell date +'%Y%m%d')
 LINTIAN_FLAGS = --suppress-tags embedded-library,no-copyright-file,extended-description-is-empty,missing-depends-line
 
 .SECONDARY: binutils-$(BINUTILS_VERSION)/ gcc-$(GCC_VERSION)/
+.SUFFIXES:
 
 binutils-%.tar.gz:
 	wget -c ftp://ftp.gnu.org/gnu/binutils/$@
