--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: c
 
+sudo: required
+
 addons:
   apt:
     packages:
@@ -13,5 +15,8 @@ addons:
     - texinfo
 
 script:
+  - wget http://ftp.gnu.org/gnu/autoconf/autoconf-2.64.tar.gz
+  - tar xzf autoconf-2.64.tar.gz
+  - cd autoconf-2.64 && ./configure && make && sudo make install
   - make -C toolchain -n
   - make -C toolchain
