Makefile improvement,fixed automake binutils patch

--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -4,6 +4,7 @@ SYSROOT = $(shell pwd)/../sysroot
 
 BINUTILS_VERSION = 2.27
 GCC_VERSION = 6.1.0
+ISL_VERSION = 0.16.1
 
 BINUTILS_PACKAGE = $(TARGET)-binutils-$(BINUTILS_VERSION)-$(PACKAGE_VERSION)
 GCC_PACKAGE = $(TARGET)-gcc-$(GCC_VERSION)-$(PACKAGE_VERSION)
@@ -12,7 +13,7 @@ PACKAGE_VERSION= 0.1-$(shell date +'%Y%m%d')
 
 LINTIAN_FLAGS = --suppress-tags embedded-library,no-copyright-file,extended-description-is-empty,missing-depends-line
 
-.SECONDARY: binutils-$(BINUTILS_VERSION)/ gcc-$(GCC_VERSION)/
+.SECONDARY: binutils-$(BINUTILS_VERSION)/ binutils-$(BINUTILS_VERSION).tar.gz isl-$(ISL_VERSION)/ isl-$(ISL_VERSION).tar.bz2  gcc-$(GCC_VERSION)/ gcc-$(GCC_VERSION).tar.gz
 .SUFFIXES:
 
 all: gcc-install
@@ -23,20 +24,33 @@ binutils-%.tar.gz:
 gcc-%.tar.gz:
 	wget -c ftp://ftp.gnu.org/gnu/gcc/$@
 
+isl-%.tar.bz2:
+	wget -c ftp://gcc.gnu.org/pub/gcc/infrastructure/$@
+
 binutils-%/: binutils-%.tar.gz
 	tar xzf $<
 
 gcc-%/: gcc-%.tar.gz
 	tar xzf $<
 
+isl-%/: isl-%.tar.bz2
+	tar xjf $<
+
+binutils-$(BINUTILS_VERSION)/isl: isl-$(ISL_VERSION) binutils-$(BINUTILS_VERSION)/
+	ln -s ../$< $@
+
 %-config.done: %-configure
 	touch $@
 
-binutils-configure: binutils-$(BINUTILS_VERSION)/
-	if [ $$NO_AUTOMAKE -eq 1 ]; then patch -p0 -N  -r- < patches/binutils-$(BINUTILS_VERSION)-automake.patch; else patch -p0 -N  -r- < patches/binutils-$(BINUTILS_VERSION).patch; fi
-	if [ $$NO_AUTOMAKE -ne 1 ]; then cd binutils-$(BINUTILS_VERSION)/ld && AUTOCONF=autoconf2.64 automake-1.11; fi
+binutils-configure: binutils-$(BINUTILS_VERSION)/ binutils-$(BINUTILS_VERSION)/isl
+ifeq ($(NO_AUTOMAKE),1)
+		patch -p0 -N  -r- < patches/binutils-$(BINUTILS_VERSION)-automake.patch
+else
+		patch -p0 -N  -r- < patches/binutils-$(BINUTILS_VERSION).patch
+		cd binutils-$(BINUTILS_VERSION)/ld && AUTOCONF=autoconf2.64 automake-1.11
+endif
 	mkdir -p build-binutils
-	cd build-binutils && ../binutils-$(BINUTILS_VERSION)/configure --target=$(TARGET) --prefix=/usr --disable-nls --disable-werror
+	cd build-binutils && ../binutils-$(BINUTILS_VERSION)/configure --target=$(TARGET) --prefix=/usr --disable-nls --disable-werror --with-isl
 
 binutils-make: binutils-config.done
 	cd build-binutils && make
@@ -45,9 +59,9 @@ binutils-install: binutils-make
 	cd build-binutils && make install
 
 binutils-deb: binutils-make
-	mkdir -p dist/$(BINUTILS_PACKAGE)/debian
+	mkdir -p dist/$(BINUTILS_PACKAGE)/DEBIAN
 	cd build-binutils && make install-strip DESTDIR="$(shell pwd)/dist/$(BINUTILS_PACKAGE)"
-	cat control-template | sed 's/\$$TARGET\$$/$(TARGET)/g' | sed 's/\$$SOFT\$$/binutils/g' | sed 's/\$$SOFT_VERSION\$$/$(BINUTILS_VERSION)/g' | sed 's/\$$PACKAGE_VERSION\$$/$(PACKAGE_VERSION)/g' | sed 's/\$$ARCH\$$/amd64/g' > dist/$(BINUTILS_PACKAGE)/debian/control
+	cat control-template | sed 's/\$$TARGET\$$/$(TARGET)/g' | sed 's/\$$SOFT\$$/binutils/g' | sed 's/\$$SOFT_VERSION\$$/$(BINUTILS_VERSION)/g' | sed 's/\$$PACKAGE_VERSION\$$/$(PACKAGE_VERSION)/g' | sed 's/\$$ARCH\$$/amd64/g' > dist/$(BINUTILS_PACKAGE)/DEBIAN/control
 	find dist/$(BINUTILS_PACKAGE)/usr/share/man -type f | while read f; do gzip -9 $$f; done
 	rm -r dist/$(BINUTILS_PACKAGE)/usr/share/info
 	fakeroot dpkg-deb -b dist/$(BINUTILS_PACKAGE)
