Forgot to make these changes

--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -108,7 +108,7 @@ gcc-deb: gcc-make
 	cd build-gcc && make install-strip-gcc DESTDIR="$(shell pwd)/dist/$(GCC_PACKAGE)"
 	cd build-gcc && make install-strip-target-libgcc DESTDIR="$(shell pwd)/dist/$(GCC_PACKAGE)"
 	cat control-template | sed 's/\$$TARGET\$$/$(TARGET)/g' | sed 's/\$$SOFT\$$/gcc/g' | sed 's/\$$SOFT_VERSION\$$/$(GCC_VERSION)/g' | sed 's/\$$PACKAGE_VERSION\$$/$(PACKAGE_VERSION)/g' | sed 's/\$$ARCH\$$/amd64/g' > dist/$(GCC_PACKAGE)/DEBIAN/control
-	echo Depends: $(TARGET)-binutils >> dist/$(GCC_PACKAGE)/debian/control
+	echo Depends: $(TARGET)-binutils >> dist/$(GCC_PACKAGE)/DEBIAN/control
 	rm -r dist/$(GCC_PACKAGE)/usr/share/man/man7
 	find dist/$(GCC_PACKAGE)/usr/share/man -type f | while read f; do gzip -9 $$f; done
 	fakeroot dpkg-deb -b dist/$(GCC_PACKAGE)
