--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,6 @@ addons:
     - texinfo
 
 script:
-  - NO_AUTOMAKE=1 make -C toolchain
+    - NO_AUTOMAKE=1 make -C toolchain binutils-deb
+    - sudo make -C toolchain binutils-install-deb
+    - NO_AUTOMAKE=1 make -C toolchain gcc-deb
