--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -11,9 +11,11 @@ align_right_cmt_mix=false
 align_same_func_call_params=false
 align_single_line_brace=false
 align_single_line_func=false
+align_var_def_amp_style=0
 align_var_def_attribute=false
 align_var_def_colon=false
 align_var_def_inline=false
+align_var_def_star_style=0
 align_with_tabs=true
 cmt_c_group=false
 cmt_c_nl_end=false
@@ -125,6 +127,7 @@ sp_after_semi_for_empty=remove
 sp_after_semi_for=force
 sp_after_semi=ignore
 sp_after_sparen=remove
+sp_after_tparen_close=remove
 sp_attribute_paren=remove
 sp_balance_nested_parens=false
 sp_before_case_colon=remove
@@ -143,6 +146,7 @@ sp_func_proto_paren=remove
 sp_incdec=remove
 sp_inside_braces_empty=remove
 sp_inside_fparens=remove
+sp_inside_tparen=remove
 sp_inv=remove
 sp_member=remove
 sp_paren_brace=remove
