--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -15,9 +15,34 @@ PACKAGE_VERSION= 0.1-$(shell date +'%Y%m%d')
 
 LINTIAN_FLAGS = --suppress-tags embedded-library,no-copyright-file,extended-description-is-empty,missing-depends-line
 
+.PHONY: automake
 .SUFFIXES:
 
+AUTOMAKE = automake-1.11
+ifeq ("$(shell which $(AUTOMAKE))", "")
+  AUTOMAKE = $(PWD)/prefix/bin/automake-1.11
+else
+  ifneq ($(shell $(AUTOMAKE) --version|head -n1|cut -d'.' -f3), 6)
+    AUTOMAKE = $(PWD)/prefix/bin/automake-1.11
+  endif
+endif
+
 all:
+
+automake:
+ifneq ($(NO_AUTOMAKE),1)
+  ifneq ($(shell $(AUTOMAKE) --version|head -n1|cut -d'.' -f3), 6)
+	wget -nv -c ftp://ftp.gnu.org/gnu/automake/automake-1.11.6.tar.gz
+	tar xzf automake-1.11.6.tar.gz
+	mkdir -p build-automake
+	cd build-automake && ../automake-1.11.6/configure --prefix="$(PWD)/prefix"
+	cd build-automake && make && make install
+  else
+	@echo Valid automake version found
+  endif
+else
+	@echo Building without automake
+endif
 
 binutils-%.tar.gz:
 	wget -nv -c ftp://ftp.gnu.org/gnu/binutils/$@
@@ -31,12 +56,12 @@ binutils-%/configure: binutils-%.tar.gz
 gcc-%/configure: gcc-%.tar.gz
 	tar xzf $<
 
-build-binutils/Makefile: binutils-$(BINUTILS_VERSION)/configure patches/binutils-$(BINUTILS_VERSION).patch
+build-binutils/Makefile: automake binutils-$(BINUTILS_VERSION)/configure patches/binutils-$(BINUTILS_VERSION).patch
 ifeq ($(NO_AUTOMAKE),1)
 		patch -p0 -N -r- < patches/binutils-$(BINUTILS_VERSION)-automake.patch
 else
 		patch -p0 -N -r- < patches/binutils-$(BINUTILS_VERSION).patch
-		cd binutils-$(BINUTILS_VERSION)/ld && AUTOCONF=autoconf2.64 automake-1.11
+		cd binutils-$(BINUTILS_VERSION)/ld && AUTOCONF=autoconf2.64 $(AUTOMAKE)
 endif
 	mkdir -p build-binutils
 	cd build-binutils && ../binutils-$(BINUTILS_VERSION)/configure --target=$(TARGET) --prefix=/usr --with-sysroot=/usr/$(TARGET) --with-build-sysroot="$(SYSROOT)" --disable-nls --disable-werror
@@ -57,7 +82,7 @@ dist/$(BINUTILS_PACKAGE).deb: build-binutils/Makefile
 binutils-install-deb: dist/$(BINUTILS_PACKAGE).deb
 	dpkg -i $<
 
-build-gcc/Makefile: gcc-$(GCC_VERSION)/configure $(SYSROOT)/usr/include/ patches/gcc-$(GCC_VERSION).patch
+build-gcc/Makefile: automake gcc-$(GCC_VERSION)/configure $(SYSROOT)/usr/include/ patches/gcc-$(GCC_VERSION).patch
 ifndef BINUTILS
 	$(MAKE) binutils-install
 endif
