Work without sudo

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,11 @@ addons:
       - fakeroot
 
 script:
-  - make -C toolchain binutils-install-deb
-  - make -C toolchain gcc-install-deb
+  - export PATH="$PATH:$HOME/prefix/bin"
+  - make -C toolchain binutils-deb
+  - rm -rf toolchain/build-binutils
+  - make -s -C toolchain binutils-install PREFIX="$HOME/prefix"
+  - make -C toolchain gcc-deb
 
 after_failure:
   - cat toolchain/build-binutils/config.log
