--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -1,6 +1,7 @@
 TARGET = $(shell grep ^TARGET ../config.mk|cut -d' ' -f3)
 
 SYSROOT = $(shell cd ../sysroot && pwd)
+PREFIX = /usr
 
 BINUTILS := $(shell command -v $(TARGET)-as 2> /dev/null)
 
@@ -65,7 +66,11 @@ else
 		cd binutils-$(BINUTILS_VERSION)/ld && AUTOCONF=autoconf2.64 $(AUTOMAKE)
 endif
 	mkdir -p build-binutils
-	cd build-binutils && ../binutils-$(BINUTILS_VERSION)/configure --target=$(TARGET) --prefix=/usr --with-sysroot=/usr/$(TARGET) --with-build-sysroot="$(SYSROOT)" --disable-nls --disable-werror
+	cd build-binutils && ../binutils-$(BINUTILS_VERSION)/configure --target=$(TARGET) --prefix=$(PREFIX) --with-sysroot=/usr/$(TARGET) --with-build-sysroot="$(SYSROOT)" --disable-nls --disable-werror
+
+binutils-install: build-binutils/Makefile
+	cd build-binutils && make
+	cd build-binutils && make install
 
 binutils-deb: dist/$(BINUTILS_PACKAGE).deb
 
@@ -95,7 +100,7 @@ else
 endif
 	cd gcc-$(GCC_VERSION) && ./contrib/download_prerequisites
 	mkdir -p build-gcc
-	cd build-gcc && ../gcc-$(GCC_VERSION)/configure --target=$(TARGET) --with-sysroot=/usr/$(TARGET) --with-build-sysroot="$(SYSROOT)" --prefix=/usr --enable-languages=c --disable-nls --disable-werror --with-isl
+	cd build-gcc && ../gcc-$(GCC_VERSION)/configure --target=$(TARGET) --with-sysroot=/usr/$(TARGET) --with-build-sysroot="$(SYSROOT)" --prefix=$(PREFIX) --enable-languages=c --disable-nls --disable-werror --with-isl
 
 gcc-install: build-gcc/Makefile
 	cd build-gcc && make all-gcc
