--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -30,7 +30,7 @@ cmt_multi_check_last=true
 cmt_star_cont=false
 eat_blanks_after_open_brace=false
 eat_blanks_before_close_brace=false
-indent_access_spec_body=false
+indent_access_spec_body=true
 indent_align_assign=true
 indent_align_string=true
 indent_bool_paren=false
@@ -41,7 +41,7 @@ indent_braces_no_class=false
 indent_braces_no_func=false
 indent_braces_no_struct=false
 indent_class_colon=false
-indent_class=false
+indent_class=true
 indent_cmt_with_tabs=true
 indent_col1_comment=false
 indent_columns=4
@@ -122,6 +122,8 @@ pp_indent_at_level=false
 pp_region_indent_code=false
 sp_addr=remove
 sp_after_comma=add
+sp_after_dc=remove
+sp_after_new=add
 sp_after_ptr_star_func=add
 sp_after_semi_for_empty=remove
 sp_after_semi_for=force
@@ -132,19 +134,27 @@ sp_attribute_paren=remove
 sp_balance_nested_parens=false
 sp_before_case_colon=remove
 sp_before_comma=remove
+sp_before_dc=remove
 sp_before_nl_cont=add
 sp_before_ptr_star_func=remove
 sp_before_semi_for_empty=remove
 sp_before_semi_for=remove
 sp_before_semi=remove
 sp_between_ptr_star=remove
+sp_brace_catch=add
+sp_brace_else=add
+sp_brace_finally=add
+sp_brace_typedef=add
 sp_cond_colon=ignore
 sp_cond_question=ignore
 sp_deref=remove
+sp_func_call_paren_empty=remove
+sp_func_class_paren=remove
 sp_func_def_paren=remove
 sp_func_proto_paren=remove
 sp_incdec=remove
 sp_inside_braces_empty=remove
+sp_inside_fparen=remove
 sp_inside_fparens=remove
 sp_inside_tparen=remove
 sp_inv=remove
@@ -153,6 +163,7 @@ sp_paren_brace=remove
 sp_sign=remove
 sp_sizeof_paren=remove
 sp_special_semi=remove
+sp_type_func=add
 tok_split_gte=false
 utf8_bom=remove
 utf8_byte=false
